Fix file leak in ClassFinder
* Adds a try-with-resources block to close a zipfile in the class finder
* And the impossible to resist first java 17 related minor refactoring.